[tool.poetry]
name = "local-results-heatmap"
version = "0.1.0"
description = "A project to generate a heatmap to visualize the performance of a client's website in local search results."
authors = ["Tyler Gargula tyler.gargula@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
pgeocode = "^0.3.0"
tqdm = "^4.64.0"
zipcodes = "^1.2.0"
geopy = "^2.2.0"
requests = "^2.28.0"
plotly = "^5.10.0"
folium = "^0.12.0"
branca = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"